--- a/index.html
+++ b/index.html
@@ -63,7 +63,23 @@
                 <strong>Vietnamese:</strong> CHÚC MỪNG SINH NHẬT CUTIE, ANH YÊU EM ♥️ <br><br><br>
                 <strong>Xhosa:</strong> USUKU OLUSHA LOKUZALWA CUTIE, NDIKUTHANDA ♥️ <br><br><br>
                 <strong>Zulu:</strong> USUKU OLUSHA LOKUZALWA CUTIE, NGIKUTHANDA ♥️ <br><br><br>
-                <strong>Morse Code:</strong> .... .- .--. .--. -.-- / -... .. .-. - .... -.. .- -.-- / -.-. ..- - .. . --..-- / .. / .-.. --- ...- . / -.-- --- ..- ♥️
+                <strong>Morse Code:</strong> .... .- .--. .--. -.-- / -... .. .-. - .... -.. .- -.-- / -.-. ..- - .. . --..-- / .. / .-.. --- ...- . / -.-- --- ..- ♥️ <br><br><br>
+                <strong>Klingon:</strong> qoSlIj DatIvjaj CUTIE, qamuSHa' ♥️ <br><br><br>
+                <strong>Dothraki:</strong> Vezho Khorro CUTIE, Rhaeshisar mae ♥️ <br><br><br>
+                <strong>Valyrian:</strong> Vezhvenari Khorro CUTIE, Rhaeshisar mae ♥️ <br><br><br>
+                <strong>Elvish (Sindarin):</strong> Losto beth nin CUTIE, melin le ♥️ <br><br><br>
+                <strong>Huttese:</strong> Fodana Nayr CUTIE, Uda kuul ♥️ <br><br><br>
+                <strong>Vulcan:</strong> Dif-tor heh, spohkh CUTIE, kahr-ral-lei ♥️ <br><br><br>
+                <strong>Quenya (Elvish):</strong> Eä arda túrin CUTIE, melin lle ♥️ <br><br><br>
+                <strong>Simlish:</strong> Zibba Zobba CUTIE, Ibbra Dinna ♥️ <br><br><br>
+                <strong>Mando'a:</strong> Velaar'la Nayr CUTIE, Riyayl ruus ♥️ <br><br><br>
+                <strong>Na'vi:</strong> Oel ngati kameie CUTIE, Oel ngati kame ♥️ <br><br><br>
+                <strong>Parseltongue:</strong> Sssszss sssoooom sszzzzzzsss CUTIE, sss I lovvvveee you ♥️ <br><br><br>
+                <strong>Yoda Speak:</strong> Happy Birthday, you are CUTIE, Love you I do ♥️ <br><br><br>
+                <strong>Minionese:</strong> Bananana CUTIE, I Love You! ♥️ <br><br><br>
+                <strong>Pig Latin:</strong> Appy-Hay Irthday-Bay, I Ove-Lay Ou-Yay ♥️ <br><br><br>
+                <strong>Huttese:</strong> Kanjikool CUTIE, P'loya Ijha ♥️ <br><br><br>
+
             </p>
         </div>
     </div>
