--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <h3 class="text-info">Special Message for You!</h3>
             <p class="birthday-message text-dark bg-light">
                 <strong>English:</strong> HAPPY BIRTHDAY CUTIE, I LOVE YOU ♥️ <br><br><br>
-                <strong>Hindi:</strong> हैप्पी बर्थडे कटie, आई लव यू ♥️ <br><br><br>
+                <strong>Hindi:</strong> जन्मदिन मुबारक हो CUTIE, मैं तुमसे प्यार करता हूँ ♥️ <br><br><br>
                 <strong>Arabic:</strong> عيد ميلاد سعيد يا كيوتي، أحبك ♥️ <br><br><br>
                 <strong>Bengali:</strong> শুভ জন্মদিন কিউটি, আমি তোমাকে ভালোবাসি ♥️ <br><br><br>
                 <strong>Chinese (Simplified):</strong> 生日快乐 CUTIE，我爱你 ♥️ <br><br><br>
